--- a/test/expected/options-selectors.html
+++ b/test/expected/options-selectors.html
@@ -5,36 +5,35 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="toc"><ul class="nav sidenav"><li><a href="#abc">ABC</a></li>
-<li><a href="#foo">Foo</a><ul class="nav"><li><a href="#foo-baz">Baz</a></li></ul></li>
-<li><a href="#bar">Bar</a><ul class="nav"><li><a href="#bar-baz-1">Baz</a></li></ul></li>
-<li><a href="#baz-2">Baz</a><ul class="nav"><li><a href="#baz-2-baz-3">Baz</a></li></ul></li></ul></div>
+  <div id="toc"><ul class="nav sidenav"><li><a href="#abc">ABC</a><ul class="nav"><li><a href="#abc-foo">Foo</a><ul class="nav"><li><a href="#abc-foo-baz">Baz</a></li></ul></li>
+<li><a href="#abc-bar">Bar</a><ul class="nav"><li><a href="#abc-bar-baz-1">Baz</a></li></ul></li>
+<li><a href="#abc-baz-2">Baz</a><ul class="nav"><li><a href="#abc-baz-2-baz-3">Baz</a></li></ul></li></ul></li></ul></div>
   <h1 id="abc">ABC<a href="#abc" name="abc" class="anchor">
   <span class="anchor-target" id="abc"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h1>
-  <h2 id="foo">Foo<a href="#foo" name="foo" class="anchor">
-  <span class="anchor-target" id="foo"></span>
+  <h2 id="abc-foo">Foo<a href="#abc-foo" name="abc-foo" class="anchor">
+  <span class="anchor-target" id="abc-foo"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h2>
-  <h3 id="foo-baz">Baz<a href="#foo-baz" name="foo-baz" class="anchor">
-  <span class="anchor-target" id="foo-baz"></span>
+  <h3 id="abc-foo-baz">Baz<a href="#abc-foo-baz" name="abc-foo-baz" class="anchor">
+  <span class="anchor-target" id="abc-foo-baz"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h3>
-  <h2 id="bar">Bar<a href="#bar" name="bar" class="anchor">
-  <span class="anchor-target" id="bar"></span>
+  <h2 id="abc-bar">Bar<a href="#abc-bar" name="abc-bar" class="anchor">
+  <span class="anchor-target" id="abc-bar"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h2>
-  <h3 id="bar-baz-1">Baz<a href="#bar-baz-1" name="bar-baz-1" class="anchor">
-  <span class="anchor-target" id="bar-baz-1"></span>
+  <h3 id="abc-bar-baz-1">Baz<a href="#abc-bar-baz-1" name="abc-bar-baz-1" class="anchor">
+  <span class="anchor-target" id="abc-bar-baz-1"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h3>
-  <h2 id="baz-2">Baz<a href="#baz-2" name="baz-2" class="anchor">
-  <span class="anchor-target" id="baz-2"></span>
+  <h2 id="abc-baz-2">Baz<a href="#abc-baz-2" name="abc-baz-2" class="anchor">
+  <span class="anchor-target" id="abc-baz-2"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h2>
-  <h3 id="baz-2-baz-3">Baz<a href="#baz-2-baz-3" name="baz-2-baz-3" class="anchor">
-  <span class="anchor-target" id="baz-2-baz-3"></span>
+  <h3 id="abc-baz-2-baz-3">Baz<a href="#abc-baz-2-baz-3" name="abc-baz-2-baz-3" class="anchor">
+  <span class="anchor-target" id="abc-baz-2-baz-3"></span>
   <span class="glyphicon glyphicon-link"></span>
 </a></h3>
 </body>
